# sweepr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: bip39.rs  cli.rs  lib.rs  main.rs  network.rs  sync.rs  wallet.rs
tests/: bip39.rs  network.rs  utils.rs  wallet.rs
