[package]
name = "sweepr"
version = "0.1.0"
edition = "2021"
authors = ["Einherjar <realeinherjar@proton.me>"]
description = "A sweepr CLI for the hodlr that just wants to sweep the funds from a seed to an address"
license = "MIT"
readme = "README.md"

[dependencies]
bdk = { version = "0.28.0", features = [
  "keys-bip39",
  "async-interface",
  "use-esplora-async",
  "key-value-db",
  "std",
], default-features = false }
clap = { version = "4.3.0", features = ["derive"] }
esplora-client = { version = "0.6.0", features = ["async-https-native"] }
tokio = { version = "1", features = ["full"] }

[features]
test-sync = []
