[package]
name = "sweepr"
version = "0.1.0"
edition = "2021"
authors = ["Einherjar <realeinherjar@proton.me>"]
description = "A sweepr CLI for the hodlr that just wants to sweep the funds from a seed to an address"
license = "MIT"
readme = "README.md"

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-alpha.1", features = [
  "keys-bip39",
  "std",
], default-features = false }
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-alpha.1" }
bdk_esplora = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-alpha.1", features = [
  "async-https",
] }
bdk_file_store = { git = "https://github.com/bitcoindevkit/bdk", tag = "v1.0.0-alpha.1" }
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
rayon = "1.7.0"
tokio = { version = "1", features = ["full"] }

[features]
test-sync = []

[profile.release]
lto = true
